--- a/main.css
+++ b/main.css
@@ -18,34 +18,6 @@ header {
     z-index: 3;
 }
 
-@media screen and (max-width: 800px) {
-    header {
-        display: flex;
-        justify-content: space-around;
-    }
-    .container {
-        color: wheat;
-    }
-    .projetos {
-        color: wheat;
-    }
-}
-
-@media screen and (max-width: 390px) {
-    .remove {
-        display: none;
-    }
-    header {
-        justify-content: space-around;
-    }
-    .container {
-        color: wheat;
-    }
-    .projetos {
-        color: wheat;
-    }
-}
-
 .nomesite {
     padding-left: 15px;
     color: rgb(83, 11, 56);
@@ -76,13 +48,14 @@ a:hover {
 }
 
 .container {
-    height: 70vh;
+    height: 100%;
     text-align: center;
     margin: auto;
-    top: 100px;
     width: 70%;
     position: relative;
     z-index: 2;
+    margin-top: 30vh;
+    margin-bottom: 30vh;
 }
 
 p {
@@ -94,9 +67,15 @@ p {
     margin: 0 25px;
     text-align: center;
     position: relative;
-    top: 100px;
     color: rgb(83, 11, 56);
     font-size: 1.5rem;
+}
+
+img {
+    border: 0;
+    width: 100px;
+    height: 100px;
+    margin-top: 9px;
 }
 
 .sites {
@@ -104,10 +83,7 @@ p {
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-}
-
-.contorno {
-    border: 1px solid wheat;
+    grid-gap: 3vh;
 }
 
 footer {
@@ -117,4 +93,36 @@ footer {
     height: 75px;
     padding: 15px;
     bottom: 0;
+}
+
+@media screen and (max-width: 800px) {
+    header {
+        display: flex;
+        justify-content: space-around;
+    }
+    p {
+        font-size: 1.3rem;
+    }
+}
+
+@media screen and (max-width: 390px) {
+    .remove {
+        display: none;
+    }
+    header {
+        justify-content: space-around;
+    }
+    p {
+        font-size: 1.1rem;
+        margin: 5px;
+    }
+    body {
+        font-size: 1rem;
+    }
+    .nomesite {
+        font-size: 1.3rem;
+    }
+    .container {
+        margin: 10vh;
+    }
 }
