added a max-width to the touristic attraction site

--- a/dia3/touristicmain.css
+++ b/dia3/touristicmain.css
@@ -72,6 +72,7 @@ h1 {
 .gallerygrid {
     display: flex;
     width: 70vw;
+    max-width: 900px;
     margin: auto;
     justify-content: space-between;
     flex-wrap: wrap;
